# sample-system-azure-functions

./: .gitignore  LICENSE.txt  README.md  _config.yml  _toc.yml  action.yml  pyproject.toml  requirements.txt
.github/workflows/: jupyter-book.yml
greetings-java/: pom.xml
greetings-java/scripts/: configure_function.sh  create_function.sh  create_resourcegroup.sh  invoke_function.sh  publish_function.sh
greetings-javascript/: package-lock.json  package.json
greetings-javascript/scripts/: configure_function.sh  create_function.sh  invoke_function.sh  publish_function.sh
greetings-typescript/: package-lock.json  package.json
sample-java/: INSTRUMENTATION.md  INTRUMENTATION.md  README.md  pom.xml  template.settings.json
sample-javascript/: README.md  package-lock.json  package.json
sample-javascript@azure-functions@v4/: INSTRUMENTATION.md  README.md  host.json  package-lock.json  package.json  template.settings.json
sample-typescript/: README.md  host.json  package-lock.json  package.json
sample-typescript2/HttpTrigger1/: index.ts
sample-typescript2/shared/: observability.ts
sample-typescript@azure-functions@v3/: .env.template  INSTRUMENTATION.md  README.md  docker-compose.yml  host.json  package-lock.json  package.json  populate.sql
sample-typescript@azure-functions@v3/HttpTrigger1/: index.ts
sample-typescript@azure-functions@v3/fnsamplebase/: function.json  index.ts
sample-typescript@azure-functions@v4/: README.md
scripts/: configure_functionapp.sh  create_functionapp.sh  create_resourcegroup.sh  invoke_function.sh  publish_functionapp.sh
(+34 files in other folders)
