[tool.poetry]
name = "sample-system-azure-functions"
version = "0.1.0"
description = ""
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
jupyter-book = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
